pnl: use gdk_cursor_new_from_name()

We should be consistently using cursor names everywhere.

https://bugzilla.gnome.org/show_bug.cgi?id=778413